[project]
name = "my-langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=4.0.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-sdk>=0.3.13",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
